--- a/book/ch05.html
+++ b/book/ch05.html
@@ -34,12 +34,321 @@
             </ul>
 
             <h1><a id="h5"></a><span class="secno">第5章　</span>ライブステージページを作る</h1>
+<p>第3章で作ったHTMLを元に、この章ではライブステージページを作っていきます。第4章と同じく<tt>main</tt>要素の中身をマークアップしていきます。</p>
 
 <h2><a id="h5-1"></a><span class="secno">5.1　</span>動画部分のマークアップ</h2>
+<p>はじめに動画部分のマークアップをしていきます。アーティスト名と曲名部分へスタイルを適用させるため、それぞれ<tt>span</tt>要素で括ります。</p>
+<p>YouTubeの動画をページ内に埋め込みます。ウィンドウ幅や高さを変えたとき、YouTubeの動画が表示領域からはみ出すのを防ぐため、<tt>iframe</tt>要素を<tt>div</tt>要素で囲います。この<tt>div</tt>要素にはのちほどスタイルを適用します。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;div class=&quot;col-md-6&quot;&gt;
+  &lt;h2 class=&quot;ll-video-title-and-artist&quot;&gt;
+    &lt;span class=&quot;ll-video-artist&quot;&gt;μ's&lt;/span&gt;&lt;span class=&quot;ll-video-title&quot;&gt;Angelic Angel&lt;/span&gt;
+  &lt;/h2&gt;
+  &lt;div class=&quot;ll-live-video-wrapper&quot;&gt;
+    &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/oWIE7GwJu3c&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+</div>
 
-<h2><a id="h5-2"></a><span class="secno">5.2　</span>コメント部分のマークアップ</h2>
+<h2><a id="h5-2"></a><span class="secno">5.2　</span>動画情報部分のマークアップ</h2>
+<p>次に動画情報部分のマークアップをしていきます。今回はコメント部分のみを実装します。実装方法としてはTwitterのハッシュタグ検索ウィジェットを使っていきます。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;div class=&quot;col-md-3 col-sm-6 ll-video-detail&quot;&gt;
+  &lt;ul class=&quot;nav nav-tabs nav-justified ll-video-tabs&quot;&gt;
+    &lt;li&gt;&lt;a href=&quot;&quot;&gt;Status&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;&quot;&gt;Like&lt;/a&gt;&lt;/li&gt;
+    &lt;li class=&quot;active&quot;&gt;&lt;a href=&quot;&quot;&gt;Comment&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;&quot;&gt;Settings&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+
+  &lt;a class=&quot;twitter-timeline&quot; data-dnt=&quot;true&quot; href=&quot;https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96&quot; data-widget-id=&quot;620242924207386625&quot;&gt;#ラブライブ のツイート&lt;/a&gt;
+&lt;/div&gt;
+</pre>
+</div>
 
 <h2><a id="h5-3"></a><span class="secno">5.3　</span>広告部分のマークアップ</h2>
+<p>次に広告部分のマークアップをしていきます。基本はBootstrapで定義されているクラス名をHTMLに書いていくのみとなります。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;div class=&quot;col-md-3 col-sm-6 ll-livestage-ad&quot;&gt;
+  &lt;h2 class=&quot;ll-ad-title&quot;&gt;
+    Ad
+  &lt;/h2&gt;
+
+  &lt;div class=&quot;list-group&quot;&gt;
+    &lt;a href=&quot;https://github.com/kubosho/Nico&quot; class=&quot;list-group-item&quot;&gt;
+      &lt;div class=&quot;list-group-item-heading&quot;&gt;
+        Nico
+      &lt;/div&gt;
+
+      &lt;p class=&quot;list-group-item-text&quot;&gt;
+        &quot;Nico&quot; a fork of &quot;Honoka&quot; which is a Bootstrap theme.
+      &lt;/p&gt;
+    &lt;/a&gt;
+
+    &lt;a href=&quot;https://github.com/kubosho/kotori&quot; class=&quot;list-group-item&quot;&gt;
+      &lt;div class=&quot;list-group-item-heading&quot;&gt;
+        Kotori
+      &lt;/div&gt;
+
+      &lt;p class=&quot;list-group-item-text&quot;&gt;
+        A tool that automatically format and evaluate for CSS.
+      &lt;/p&gt;
+    &lt;/a&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+</div>
+<p>最後にライブステージページで書いたHTMLを、次のHTMLで全体を囲ったら完成です。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;div class=&quot;container-fluid&quot;&gt;
+  &lt;div class=&quot;row&quot;&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+</div>
+
+<h2><a id="h5-4"></a><span class="secno">5.4　</span>HTMLのまとめ</h2>
+<p>ライブステージのHTMLをまとめると次のとおりになります。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;div class=&quot;container-fluid&quot;&gt;
+  &lt;div class=&quot;row&quot;&gt;
+    &lt;div class=&quot;col-md-6&quot;&gt;
+      &lt;h2 class=&quot;ll-video-title-and-artist&quot;&gt;
+        &lt;span class=&quot;ll-video-artist&quot;&gt;μ's&lt;/span&gt;&lt;span class=&quot;ll-video-title&quot;&gt;Angelic Angel&lt;/span&gt;
+      &lt;/h2&gt;
+      &lt;div class=&quot;ll-live-video-wrapper&quot;&gt;
+        &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/oWIE7GwJu3c&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+    &lt;div class=&quot;col-md-3 col-sm-6 ll-video-detail&quot;&gt;
+      &lt;ul class=&quot;nav nav-tabs nav-justified ll-video-tabs&quot;&gt;
+        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Status&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Like&lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;active&quot;&gt;&lt;a href=&quot;&quot;&gt;Comment&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Settings&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+
+      &lt;a class=&quot;twitter-timeline&quot; data-dnt=&quot;true&quot; href=&quot;https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96&quot; data-widget-id=&quot;620242924207386625&quot;&gt;#ラブライブ のツイート&lt;/a&gt;
+    &lt;/div&gt;
+
+    &lt;div class=&quot;col-md-3 col-sm-6 ll-livestage-ad&quot;&gt;
+      &lt;h2 class=&quot;ll-ad-title&quot;&gt;
+        Ad
+      &lt;/h2&gt;
+
+      &lt;div class=&quot;list-group&quot;&gt;
+        &lt;a href=&quot;https://github.com/kubosho/Nico&quot; class=&quot;list-group-item&quot;&gt;
+          &lt;div class=&quot;list-group-item-heading&quot;&gt;
+            Nico
+          &lt;/div&gt;
+
+          &lt;p class=&quot;list-group-item-text&quot;&gt;
+            &quot;Nico&quot; a fork of &quot;Honoka&quot; which is a Bootstrap theme.
+          &lt;/p&gt;
+        &lt;/a&gt;
+
+        &lt;a href=&quot;https://github.com/kubosho/kotori&quot; class=&quot;list-group-item&quot;&gt;
+          &lt;div class=&quot;list-group-item-heading&quot;&gt;
+            Kotori
+          &lt;/div&gt;
+
+          &lt;p class=&quot;list-group-item-text&quot;&gt;
+            A tool that automatically format and evaluate for CSS.
+          &lt;/p&gt;
+        &lt;/a&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+</pre>
+</div>
+
+<h2><a id="h5-5"></a><span class="secno">5.5　</span>ライブステージページ全体の見た目を整える</h2>
+<p>HTMLのマークアップが終わったので、スタイルの適用をしていきます。はじめにライブステージページ全体へ関わるスタイルを適用します。</p>
+<p>ライブステージページの<tt>main</tt>要素に対し、<tt>padding</tt>や<tt>background-color</tt>を指定することでライブステージページの見た目に近づけていきます。また見出しにもスタイルを適用することで、より元の見た目に近づけていきます。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージ：コンテンツ */
+#ll-livestage-page main {
+  padding: 1em 0;
+  background-color: #dcdcdc;
+}
+
+/* ライブステージページ：見出し */
+.ll-video-title-and-artist,
+.ll-ad-title {
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+</pre>
+</div>
+
+<h2><a id="h5-6"></a><span class="secno">5.6　</span>アーティスト名と曲名部分の見た目を整える</h2>
+<p>次にアーティスト名と曲名部分の見た目を整えていきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは再現が容易です。</p>
+<p>また曲名の左右にある括弧は特にHTML内へ書いておく必要がないため、<tt>::before</tt>と<tt>::after</tt>という擬似要素を使ってCSS側で追加します。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージページ：アーティスト名 */
+.ll-video-artist {
+  padding: 3px 0.5em;
+  border-top: 2px solid #ffdc00;
+  border-bottom: 2px solid #ffdc00;
+  background-color: #fff;
+}
+
+/* ライブステージページ：曲名 */
+.ll-video-title::before {
+  content: &quot;【&quot;;
+}
+
+.ll-video-title::after {
+  content: &quot;】&quot;;
+}
+</pre>
+</div>
+
+<h2><a id="h5-7"></a><span class="secno">5.7　</span>動画部分の見た目を整える</h2>
+<p>次に動画部分の見た目を整えます。動画部分はブラウザーの描画領域を狭めたときに潰れて表示されないようします。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージページ：動画部分をレスポンシブにする */
+.ll-live-video-wrapper {
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+}
+
+.ll-live-video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</pre>
+</div>
+
+<h2><a id="h5-8"></a><span class="secno">5.8　</span>動画詳細部分の見た目を整える</h2>
+<p>次に動画詳細部分の見た目を整えます。動画詳細部分はグローバルナビゲーションとほぼ同じ見た目になっています。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージページ：動画の詳細 */
+.ll-video-detail {
+  margin: 1em 0;
+}
+@media (min-width: 992px) {
+  .ll-video-detail {
+    margin: 0;
+  }
+}
+
+/* ライブステージページ：動画の詳細タブ */
+.ll-video-tabs {
+  background-color: #ff50ac;
+}
+
+.ll-video-tabs &gt; li &gt; a {
+  margin-bottom: 0 !important;
+  text-transform: uppercase;
+}
+
+.ll-video-tabs &gt; li &gt; a:link,
+.ll-video-tabs &gt; li &gt; a:visited {
+  color: #fff;
+}
+
+.ll-video-tabs &gt; li &gt; a:hover,
+.ll-video-tabs &gt; li &gt; a:focus {
+  color: #ff188b;
+}
+
+.ll-video-tabs &gt; li.active &gt; a {
+  color: #555;
+}
+</pre>
+</div>
+
+<h2><a id="h5-9"></a><span class="secno">5.9　</span>動画詳細部分の見た目を各描画領域ごとに整える</h2>
+<p>次に動画詳細部分の見た目を各描画領域ごとに整えます。特にタブ内の文字は描画領域を小さくしていくとタブからはみ出すため、細かく調整していきます。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージページ：動画の情報タブの各描画領域ごとのスタイル定義 */
+@media (min-width: 768px) {
+  .ll-video-tabs &gt; li &gt; a {
+    padding: 5px 0;
+    border-bottom: 0;
+    border-right: 1px solid #fff;
+  }
+
+  .ll-video-tabs &gt; li:last-child &gt; a {
+    border-right: 0;
+  }
+
+  .ll-video-tabs &gt; li &gt; a:focus,
+  .ll-video-tabs &gt; li &gt; a:hover {
+    background-color: #ff92cb;
+    color: #fff;
+  }
+
+  .ll-video-tabs &gt; li.active &gt; a {
+    border-bottom: 0;
+    background-color: #ff50ac;
+    color: #fff;
+  }
+
+  .ll-video-tabs &gt; li.active &gt; a::after {
+    content: &quot;&quot;;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 3px solid #ffdc00;
+  }
+}
+@media (min-width: 992px) {
+  .ll-video-tabs &gt; li &gt; a {
+    font-size: 0.8125em;
+  }
+}
+@media (min-width: 1000px) {
+  .ll-video-tabs &gt; li &gt; a {
+    font-size: 0.875em;
+  }
+}
+</pre>
+</div>
+
+<h2><a id="h5-10"></a><span class="secno">5.10　</span>広告部分の見た目を整える</h2>
+<p>最後に広告部分の見た目を整えます。ここはある程度Bootstrapによって整えられているので、最低限のスタイルを適用するだけです。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージページ：広告 */
+.ll-livestage-ad {
+  margin: 1em 0;
+}
+@media (min-width: 992px) {
+  .ll-livestage-ad {
+    margin: 0;
+  }
+}
+</pre>
+</div>
+
+<h2><a id="h5-11"></a><span class="secno">5.11　</span>CSSのまとめ</h2>
+<p>ライブステージのCSSをまとめると次のとおりになります。</p>
+<div class="emlist-code">
+<pre class="emlist">/* ライブステージ：コンテンツ */
+#ll-livestage-page main {
+  padding: 1em 0;
+  background-color: #dcdcdc;
+}
+
+/* ライブステージページ：見出し */
+.ll-video-title-and-artist,
+.ll-ad-title {
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+</pre>
+</div>
 
 
             <ul class="pager">
