[ci skip] Update with f961f44

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -47,11 +47,11 @@
 <p>それぞれ、大まかではなく細かく書いたほうが良いです。</p>
 
 <h3><a id="h1-1-1"></a>なぜ要件定義をするのか</h3>
-<p>最初に要件定義をすることで、企画書の変更頻度が減ります。これにより、作業の巻き戻りを最小限に抑えることができます。これにより「あれも入れたい」といった、思いつきのアイデアに影響されず、一気にWebサイトを作ることが可能です。</p>
+<p>最初に要件定義をすることで、企画書の変更頻度が減ります。これにより作業の巻き戻りを最小限に抑えることができるだけでなく、「あれも入れたい」といった思いつきのアイデアに影響されず、一気にWebサイトを作ることが可能です。</p>
 
 <h3><a id="h1-1-2"></a>今回の要件定義について</h3>
-<p>では実際に要件定義をしていきます。例として、「ラブライブ参加者募集サイト」で説明します。</p>
-<p>まず、どんなWebサイトを作るかというところから始めます。今回は「ラブライブ」という、アイドルコンテストの募集サイトを作ります。手順としては、まずはターゲットユーザーを定義します。そして、ターゲットユーザーにどんな体験を与えたいのか考えます。今回は、工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このような判断も、要件定義の一部です。</p>
+<p>では実際に要件定義をしていきます。例として「ラブライブ!参加者募集サイト」で説明します。</p>
+<p>まず、どんなWebサイトを作るかというところから始めます。今回は「ラブライブ！」という、アイドルコンテストの募集サイトを作ります。手順としては、まずはターゲットユーザーを定義します。そして、ターゲットユーザーにどんな体験を与えたいのか考えます。今回は、工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。このような判断も、要件定義の一部です。</p>
 
 <h2><a id="h1-2"></a><span class="secno">1.2　</span>要素を整理する</h2>
 <p>Webサイト内にある、ボタン・画像・テキストなど、さまざまな情報表示・動作するものをWebサイトの「要素」と呼びます。どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため合理的なのか判断するためにターゲットユーザーの分析が必要となります。ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え、設計するべきです。例えば、以下のことが考えられます。</p>
@@ -84,7 +84,7 @@
 <p>字面とおりWebサイトのトップページを意味します。ユーザーがWebサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。Webサイトを見る時の習慣に準じて、一番見やすい左上へ置いたのは、理由があります。このWebサイトのターゲットユーザーにとって一番大事、もしくは一番クリックしてほしいという理由があります。ヘッダー部分には、ロゴ・メールマガジン・シェア・ツイート・お問い合わせがあります。フッター部分には利用規約や権利情報が掲載されています。</p>
 
 <h4><a id="h1-2-1-2"></a>LIVE STAGE</h4>
-<p>ラブライブの状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、アウトラインやスケジュールより左に位置しています。これは一体どういうことでしょうか？これは、参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。では、ライブステージ内にある要素が何か、アニメのキャプチャから推測してみます。以下の要素で構成されているように見えます。</p>
+<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、アウトラインやスケジュールより左に位置しています。これは一体どういうことでしょうか？これは、参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。では、ライブステージ内にある要素が何か、アニメのキャプチャから推測してみます。以下の要素で構成されているように見えます。</p>
 <ul>
 <li>映像タイトル</li>
 <li>出演者</li>
