--- a/book/ch02.html
+++ b/book/ch02.html
@@ -36,10 +36,10 @@
             </ul>
 
             <h1><a id="h2"></a><span class="secno">第2章　</span>サイト開発の準備</h1>
-<p>この章では、ラブライブ募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。</p>
+<p>この章では、ラブライブ!募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。</p>
 
 <h2><a id="h2-1"></a><span class="secno">2.1　</span>必要なツールの準備</h2>
-<p>はじめに、ラブライブ募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
+<p>はじめに、ラブライブ!募集サイトの実装で必要なツールを準備します。最低限必要なものを列挙していくと以下のものがあります。</p>
 <ul>
 <li>ソースコードを書くためのエディターもしくはIDE</li>
 <li>表示確認用のブラウザー</li>
@@ -53,7 +53,7 @@
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
 <p>2つめに必要なものとして、作ったサイトの表示確認用にブラウザーを用意します。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
-<p>しかし、これらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
+<p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 <ul>
 <li>Windows<ul>
 <li>Edge、Internet Explorer</li>
@@ -83,7 +83,7 @@
 <h3><a id="h2-2-2"></a>周りの人に聞く</h3>
 <p>検索をしても、あまりいい情報に巡りあえない場合があります。そういった場合、周りに聞ける環境であれば聞くのがいいです。</p>
 <p>聞く前に、まずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。この「○○」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。</p>
-<p>また、聞く相手を間違えないようにします。たとえば、プログラムのことを企画へに聞いても、ほとんどの場合は求める回答が返ってこないと思います。</p>
+<p>また、聞く相手を間違えないようにします。たとえばプログラムのことをエンジニア以外に聞いても、ほとんどの場合は求める回答が返ってこないと思います。</p>
 
 <h2><a id="h2-3"></a><span class="secno">2.3　</span>ライブラリ選定</h2>
 <p>ここまで、開発に必要なツールや開発の際に分からないことがあったときの対処法を書きました。ここからは、今回のサイトを実装するにあたり必要な、CSSやJavaScriptのライブラリ選定をおこなっていきます。</p>
@@ -121,8 +121,8 @@
 <h2><a id="h2-4"></a><span class="secno">2.4　</span>ライブラリの選定CSS編</h2>
 <p>ここまで、ライブラリ選定時の基準について書いてきました。ここからは、実際にライブラリ選定をしていきます。まずはじめに、CSSのライブラリから選定していきます。</p>
 <p>今回、CSSのライブラリは<a href="https://github.com/twbs/bootstrap" class="link">Bootstrap</a>のテーマである、<a href="http://kubosho.github.io/Nico/" class="link">Nico</a>を使います。</p>
-<p>選定した理由としては、今回デザイナーがいない中、ラブライブ参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。</p>
-<p>また、ラブライブ参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので、今回のために<a href="http://honokak.osaka/" class="link">Honoka - 日本語も美しく表示できるBootstrapテーマ</a>というbootstrapのテーマを元にNicoというBootstrapを作りました。</p>
+<p>選定した理由としては、今回デザイナーがいない中、ラブライブ!参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ!参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。</p>
+<p>また、ラブライブ!参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので、今回のために<a href="http://honokak.osaka/" class="link">Honoka - 日本語も美しく表示できるBootstrapテーマ</a>というbootstrapのテーマを元にNicoというBootstrapを作りました。</p>
 
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次に、JavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
