--- a/book/ch03.html
+++ b/book/ch03.html
@@ -288,8 +288,8 @@
 </div>
 
 <h2><a id="h3-9"></a><span class="secno">3.9　</span>グローバルナビゲーションの見た目をよくする</h2>
-<p>次に、グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ参加者募集サイトの見た目に合わせるため、<tt>min-height: 0;</tt>と指定して、グローバルナビゲーションの高さを狭めておきます。</p>
-<p>また今回のラブライブ参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し、<tt>text-transform: uppercase;</tt>と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。</p>
+<p>次に、グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ!参加者募集サイトの見た目に合わせるため、<tt>min-height: 0;</tt>と指定して、グローバルナビゲーションの高さを狭めておきます。</p>
+<p>また今回のラブライブ!参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し、<tt>text-transform: uppercase;</tt>と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* サイトのグローバルナビゲーション */
 #ll-nav {
