[ci skip] Update with 9ade20c

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -79,7 +79,7 @@
 <li>LINK</li>
 <li>FAQ</li>
 </ul>
-<p>1つずつ見ていきましょう。</p>
+<p>ひとつずつ見ていきましょう。</p>
 
 <h4><a id="h1-2-1-1"></a>TOP</h4>
 <p>字面とおりWebサイトのトップページを意味します。ユーザーがWebサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。Webサイトを見る時の習慣に準じて、一番見やすい左上へ置いたのは、理由があります。このWebサイトのターゲットユーザーにとって一番大事、もしくは一番クリックしてほしいという理由があります。ヘッダー部分には、ロゴ・メールマガジン・シェア・ツイート・お問い合わせがあります。フッター部分には利用規約や権利情報が掲載されています。</p>
@@ -119,7 +119,7 @@
 </div>
 
 <h2><a id="h1-3"></a><span class="secno">1.3　</span>サイトマップを作る</h2>
-<p>Webサイトのページ数とページ階層を表示する図がサイトマップです。サイトマップは、Webサイトが何ページあるかということや、ページとページの関連性をひと目で見られます。それにより、工数も推測できます。サイトマップを用意するとメリットが2つあります。1つ目に、ページ数が多いWebサイトの場合は制作スピードを上げられます。2つ目に、ページ漏れのリスクも減らすことができます。</p>
+<p>Webサイトのページ数とページ階層を表示する図がサイトマップです。サイトマップは、Webサイトが何ページあるかということや、ページとページの関連性をひと目で見られます。それにより、工数も推測できます。サイトマップを用意するとメリットがふたつあります。ひとつめに、ページ数が多いWebサイトの場合は制作スピードを上げられます。ふたつめに、ページ漏れのリスクも減らすことができます。</p>
 <p>サイトマップを書く際、個人的に推奨するツールはExcelです。画像を作るイメージからPowerPointが良いと思う方もいるかもしれません。しかし、実はセル結合や枠線を描画して作るほうが楽です。Excelを使えない場合は、Google Driveのスプレッドシートも最低限な機能がそろっているため、おすすめです。作るときの心がけとして、階層を意識し、外部リンクは明確に表示するよう作成するのがおすすめです。</p>
 
 <h3><a id="h1-3-1"></a>今回のサイトマップについて</h3>
@@ -133,9 +133,9 @@
 
 <h2><a id="h1-4"></a><span class="secno">1.4　</span>ワイヤーフレームと仕様書の作成</h2>
 <p>ワイヤーフレームはWebサイト内にある要素の種類・数・位置を示す物です。仕様書は、要素の具体的な表示方法、演出をどうするか明記する物です。場合により、ワイヤーフレームと仕様書は、両方をまとめたり分けて書くこともあります。Webサイトの内容が豊かであればあるほど、仕様書も内容は多くなるので、分けて書くことをおすすめします。1ページごとにワイヤーフレームと仕様書は必要です。そのため、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。</p>
-<p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使うのが良いです。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に、3つ気をつけたいことがあります。それらを、1つずつ解説していきます。</p>
-<p>1つめとして、ワイヤーフレームの要素は大枠で3種類に分けられます。それは、画像・テキスト・ボタンとなります。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。色もしくは形で分けるように書くことをおすすめします。</p>
-<p>2つめとして、ワイヤーフレームには余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内にあることを示すための資料です。そのため、色などはなるべく入れないのが良いです。なぜなら、デザイナはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。</p>
+<p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使うのが良いです。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に、3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
+<p>ひとつめとして、ワイヤーフレームの要素は大枠で3種類に分けられます。それは、画像・テキスト・ボタンとなります。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。色もしくは形で分けるように書くことをおすすめします。</p>
+<p>ふたつめとして、ワイヤーフレームには余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内にあることを示すための資料です。そのため、色などはなるべく入れないのが良いです。なぜなら、デザイナはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。</p>
 <p>3つめとして、仕様書を箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって、不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
@@ -148,7 +148,7 @@
 図1.4: サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
 </p>
 </div>
-<p>画像から推測すると、共通のヘッダー・グローバルナビゲーション・フッター以外、アニメ内では画像表示のみに見えます。トップページで訴求したいことは以下の2つになると思います。これは華やかな画像をいっぱい見られる設計だと思われます。</p>
+<p>画像から推測すると、共通のヘッダー・グローバルナビゲーション・フッター以外、アニメ内では画像表示のみに見えます。トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られる設計だと思われます。</p>
 <ul>
 <li>コンテストの盛り上がり</li>
 <li>歴代受賞者の宣伝</li>
