--- a/book/ch04.html
+++ b/book/ch04.html
@@ -333,7 +333,7 @@ var paginationItemElms = $(&quot;.js_slides-pagination li&quot;);
 
 <h2><a id="h4-9"></a><span class="secno">4.9　</span>カルーセルの実装をする</h2>
 <p>HTMLの要素を取得できるようにしたら、カルーセルの実装をしていきます。今回カルーセルの実装をする上でslickというライブラリを使っていきます。ここでは次のように、slickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装します。</p>
-<p>まずカルーセルの元になる<tt>Carousel</tt>関数から説明します。<tt>Carousel</tt>関数ではパラメーターとして、次の2つがあります</p>
+<p>まずカルーセルの元になる<tt>Carousel</tt>関数から説明します。<tt>Carousel</tt>関数ではパラメーターとして、次のふたつがあります</p>
 <ul>
 <li>カルーセルの要素を示す<tt>carouselE</tt></li>
 <li>カルーセルの設定を示す<tt>config</tt></li>
