--- a/book/ch02.html
+++ b/book/ch02.html
@@ -45,14 +45,14 @@
 <li>表示確認用のブラウザー</li>
 <li>作業履歴を記録するためのバージョン管理ソフト</li>
 </ul>
-<p>これらについて、1つずつ説明していきます。</p>
+<p>これらについて、ひとつずつ説明していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディターやIDE</h3>
-<p>1つめに必要なものとして、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。エディターはAtomやSublime Textがよく使われています。</p>
+<p>ひとつめに必要なものとして、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。エディターはAtomやSublime Textがよく使われています。</p>
 <p>IDEはWebStormやNetBeansがよく使われています。またWindowsであればVisual Studio Community EditionがおすすめのIDEです。</p>
 
 <h3><a id="h2-1-2"></a>ブラウザー</h3>
-<p>2つめに必要なものとして、作ったサイトの表示確認用にブラウザーを用意します。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
+<p>ふたつめに必要なものとして、作ったサイトの表示確認用にブラウザーを用意します。WindowsやOS Xには次のブラウザーが最初からインストールされています。</p>
 <p>しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。</p>
 <ul>
 <li>Windows<ul>
@@ -74,8 +74,8 @@
 
 <h3><a id="h2-2-1"></a>検索する</h3>
 <p>まずは検索します。検索する方法にも結果が出やすい手法はいくつかあります。</p>
-<p>まず1つめの手法として、たとえば<tt>CSSで背景色をつけるやり方</tt>と検索するより、<tt>CSS 背景色 やり方</tt>で検索するほうが検索結果の件数は増えます。検索エンジンは<tt>CSSで背景色をつけるやり方</tt>のような文章が苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。</p>
-<p>2つめの手法として、より入門的な内容を探したい場合、<tt>○○ とは</tt>で検索するのが良いです。理由は、入門的な記事のタイトルが<tt>○○ とは</tt>と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は<tt>JavaScript とは</tt>といった感じで検索します。</p>
+<p>まずひとつめの手法として、たとえば<tt>CSSで背景色をつけるやり方</tt>と検索するより、<tt>CSS 背景色 やり方</tt>で検索するほうが検索結果の件数は増えます。検索エンジンは<tt>CSSで背景色をつけるやり方</tt>のような文章が苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。</p>
+<p>ふたつめの手法として、より入門的な内容を探したい場合、<tt>○○ とは</tt>で検索するのが良いです。理由は、入門的な記事のタイトルが<tt>○○ とは</tt>と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は<tt>JavaScript とは</tt>といった感じで検索します。</p>
 <p>3つめの手法として、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかし、だいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。</p>
 <p>4つめの手法として、Google検索結果内にある<tt>検索ツール - 期間指定</tt>を使って、なるべく新しい情報のみ検索します。CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。そのため、期間を絞ることで新しい情報にたどりつきやすくします。</p>
 <p>しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には、期間設定が<tt>1ヶ月</tt>の後は<tt>1年</tt>となってしまうため、たとえば<tt>3ヶ月以内</tt>などは指定できません。これに関しては<a href="https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao?hl=ja" class="link">Add Search Options</a>というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に<tt>3ヶ月以内</tt>と<tt>6ヶ月以内</tt>が増えます。</p>
@@ -96,12 +96,12 @@
 <p>ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書いていきます。</p>
 
 <h4><a id="h2-3-2-1"></a>利用実績</h4>
-<p>1つめの基準として、そのライブラリが広く使われているかを見ます。理由は、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。</p>
+<p>ひとつめの基準として、そのライブラリが広く使われているかを見ます。理由は、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。</p>
 <p>たとえばCSSのライブラリである<a href="http://getbootstrap.com/" class="link">Bootstrap</a>だと、ページ下部にBootstrapを使ったサイト一覧が掲載されています。またJavaScriptのライブラリである<a href="http://jquery.com/" class="link">jQuery</a>は、<a href="http://www.amazon.co.jp/s/field-keywords=jquery" class="link">Amazon上でjQueryで検索</a>すると、jQuery関連の本が大量に表示されます。</p>
 <p>このように、利用実績やライブラリについて本が書かれているかということをまずは見ます。</p>
 
 <h4><a id="h2-3-2-2"></a>Issue・Pull Request、そして最新コミット日時</h4>
-<p>2つめの基準として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。先ほどの利用実績で挙げた例は、公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してしか、判断材料として使えないということです。</p>
+<p>ふたつめの基準として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。先ほどの利用実績で挙げた例は、公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。つまり定番と言われるライブラリに対してしか、判断材料として使えないということです。</p>
 <p>そこで使える判断基準がIssueやPull Requestの件数と最新コミット日時です。最新コミット日がたとえば6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。</p>
 <p>たとえば、放置されたライブラリに何らかのセキュリティ的な欠陥が見つかったとしても、自分達で対処しないといけません。また、プログラミングの世界には変化がたびたび訪れます。しかし放置されたライブラリを使い続けるのであれば、その変化にも自分達で対処しないといけません。</p>
 
@@ -127,7 +127,7 @@
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定JavaScript編</h2>
 <p>次に、JavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。</p>
 <p>カルーセルは、<a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a> などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリは、<a href="http://meandmax.github.io/lory/" class="link">lory</a>にします。</p>
-<p>選定した理由は2つあります。理由の1つめとして、外部ライブラリに依存せず、loryだけを読みこめばカルーセルの実装をおこなえることが挙げられます。理由の2つめとして、loryは全体像が把握しやすいことです。全体像が把握しやすいということは、何か困ったことがあってソースコードを読むときでもなんとかなるということです。</p>
+<p>選定した理由はふたつあります。理由のひとつめとして、外部ライブラリに依存せず、loryだけを読みこめばカルーセルの実装をおこなえることが挙げられます。理由のふたつめとして、loryは全体像が把握しやすいことです。全体像が把握しやすいということは、何か困ったことがあってソースコードを読むときでもなんとかなるということです。</p>
 <p>なお、カルーセルでの表示に無限ループがいらなければ<a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a>もおすすめです。また、jQueryに依存するライブラリでは<a href="http://kenwheeler.github.io/slick/" class="link">slick</a>や、<a href="http://owlgraphic.com/owlcarousel/" class="link">Owl Carousel</a>がよく使われます。</p>
 <p>これで、ライブラリの選定が終わりました。次章からはサイトの実装をしていきます。</p>
 
