[ci skip] Update with 41059cb

--- a/book/ch03.html
+++ b/book/ch03.html
@@ -39,7 +39,7 @@
 <p>いよいよ、サイトを作っていきます。まずはサイト共通の構造を今回作るトップページとライブステージから洗い出し、それをマークアップしていきます。</p>
 
 <h2><a id="h3-1"></a><span class="secno">3.1　</span>共通の構造を洗い出し</h2>
-<p>トップページやライブステージのアニメ画像キャプチャから共通構造を抜き出すと、次に挙げる3つが共通構造となります。</p>
+<p>トップページやライブステージのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。</p>
 <ul>
 <li>ヘッダー</li>
 <li>グローバルナビゲーション</li>
@@ -179,7 +179,7 @@
 
 <h2><a id="h3-6"></a><span class="secno">3.6　</span>フッターのマークアップ</h2>
 <p>ヘッダー、グローバルナビゲーションと来たので、最後にフッターをマークアップしていきます。ここには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。</p>
-<p>また、アニメの画像キャプチャを見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかし、フッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。</p>
+<p>また、アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかし、フッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;footer id=&quot;ll-footer&quot; class=&quot;navbar navbar-default&quot;&gt;
   &lt;div class=&quot;container-fluid&quot;&gt;
