--- a/book/ch01.html
+++ b/book/ch01.html
@@ -62,7 +62,7 @@
 </ul>
 
 <h3><a id="h1-2-1"></a>今回の要素について整理</h3>
-<p>アニメのキャプチャから、Webサイトを構成する要素について分析してみます。</p>
+<p>アニメのキャプチャ画像から、Webサイトを構成する要素について分析してみます。</p>
 <div id="lovelive-screenshot-top" class="image">
 <img src="images/ch01/lovelive-screenshot-top.jpg" alt="サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
 <p class="caption">
@@ -85,7 +85,7 @@
 <p>字面とおりWebサイトのトップページを意味します。ユーザーがWebサイトを見ている時、どのページにいたとしても1クリックでトップページへ戻れます。Webサイトを見る時の習慣に準じて、一番見やすい左上へ置いたのは、理由があります。このWebサイトのターゲットユーザーにとって一番大事、もしくは一番クリックしてほしいという理由があります。ヘッダー部分には、ロゴ・メールマガジン・シェア・ツイート・お問い合わせがあります。フッター部分には利用規約や権利情報が掲載されています。</p>
 
 <h4><a id="h1-2-1-2"></a>LIVE STAGE</h4>
-<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、アウトラインやスケジュールより左に位置しています。これは一体どういうことでしょうか？これは、参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。では、ライブステージ内にある要素が何か、アニメのキャプチャから推測してみます。以下の要素で構成されているように見えます。</p>
+<p>ラブライブ!の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、アウトラインやスケジュールより左に位置しています。これは一体どういうことでしょうか？これは、参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。では、ライブステージ内にある要素が何か、アニメのキャプチャ画像から推測してみます。以下の要素で構成されているように見えます。</p>
 <ul>
 <li>映像タイトル</li>
 <li>出演者</li>
@@ -153,7 +153,7 @@
 <li>コンテストの盛り上がり</li>
 <li>歴代受賞者の宣伝</li>
 </ul>
-<p>画像の表示方法はカルーセルということが分かります。アニメのキャプチャを見ると共通フッター内にドットがあります。しかしこれは、現実だと採用される可能性が極めて低いものです。ライブステージもドットが共通フッター内にあります。しかし、映像を見るページでこういった表示は普通しません。そのため考えた結果として、画像のカルーセル表示だけにしました。</p>
+<p>画像の表示方法はカルーセルということが分かります。アニメのキャプチャ画像を見ると共通フッター内にドットがあります。しかしこれは、現実だと採用される可能性が極めて低いものです。ライブステージもドットが共通フッター内にあります。しかし、映像を見るページでこういった表示は普通しません。そのため考えた結果として、画像のカルーセル表示だけにしました。</p>
 <div id="id_03" class="image">
 <img src="images/ch01/03.jpg" alt="トップページのワイヤーフレーム" />
 <p class="caption">
