[ci skip] Update with 5a0222d

--- a/book/ch01.html
+++ b/book/ch01.html
@@ -138,10 +138,10 @@
 <h2><a id="h1-4"></a><span class="secno">1.4　</span>ワイヤーフレームと仕様書の作成</h2>
 <p>ワイヤーフレームはサイト内にある要素の種類・数・位置を示す物です。仕様書は要素の具体的な表示方法や演出をどうするか明記する物です。場合によっては、ワイヤーフレームと仕様書両方をまとめたり分けて書きます。</p>
 <p>サイトの内容が豊かであればあるほど仕様書も内容は多くなります。その時は分けて書くことをおすすめします。また1ページごとにワイヤーフレームと仕様書は必要です。</p>
-<p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、1つずつ解説していきます。</p>
-<p>気をつけること1つ目として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
-<p>気をつけること2つ目として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。</p>
-<p>気をつけること3つ目として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
+<p>ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。</p>
+<p>気をつける事のひとつ目として、要素は色もしくは形で分けるように書くことです。ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。これらを見分けがつくように分けて書くことをおすすめします。</p>
+<p>気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。</p>
+<p>気をつけることの3つ目として、仕様書は箇条書きにすることです。それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回のワイヤーフレームと仕様書について</h2>
 <p>要件定義の段階で判明していましたが今回はページ数・要素共に少ないです。そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
